syntax = "proto3";

package video_call;

option go_package = "github.com/andrew-delph/cloud-video-call/common-messaging/proto";

message MatchmakerMessage {
  string user_id = 1;
  int32 cooldown_attempts = 2;
}

message ReadyMessage {
  string user_id = 1;
  double priority = 2;
  int32 cooldown_attempts = 3;
}

message MatchMessage {
  string user_id1 = 1;
  string user_id2 = 2;
  double score = 3;
}

message UserSocketMessage {
  string user_id = 1;
  string event_name = 2;
  string json_data = 3;
}

message UserNotificationMessage{
  string user_id = 1;
  string title = 2;
  string description = 3;
}


message ChatEventMessage{
  string source = 1;
  string target = 2;
  string message = 3;
  bool system = 4;
}